-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.2
-
-
1a18e138f4d17c219c6ffd6e4396c30b960818b4 (qt/qtbase/5.14.2)
When trying to build Android applications on Windows (with Qt 5.14.2 Android binary), the ndk path picked up seems to be wrong.
Building fails with:
LOG 13:38:34 > Task :stripDebugDebugSymbols FAILED LOG 13:38:34 Location specified by ndk.dir (C:UsersQTAppDataLocalAndroidSdk LOG 13:38:34 dk20.0.5594570) did not contain a valid NDK and and couldn't be used LOG 13:38:34 LOG 13:38:34 > Task :mergeDebugJavaResource LOG 13:38:34 > Task :mergeExtDexDebug LOG 13:38:34 23 actionable tasks: 23 executed LOG 13:38:34 LOG 13:38:34 FAILURE: Build failed with an exception. LOG 13:38:34 LOG 13:38:34 * What went wrong: LOG 13:38:34 Execution failed for task ':stripDebugDebugSymbols'. LOG 13:38:34 > Location specified by ndk.dir (C:UsersQTAppDataLocalAndroidSdk LOG 13:38:34 dk20.0.5594570) did not contain a valid NDK and and couldn't be used LOG 13:38:34 LOG 13:38:34 * Try: LOG 13:38:34 Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights. LOG 13:38:34 LOG 13:38:34 * Get more help at https://help.gradle.org LOG 13:38:34 LOG 13:38:34 BUILD FAILED in 8s LOG 13:38:34 Building the android package failed! LOG 13:38:34 -- For more information, run this command with --verbose. LOG 13:38:34 13:38:16: The process "C:\Users\QT\RTA\qt5\5.14.2\android\bin\androiddeployqt.exe" exited with code 14. LOG 13:38:34 Error while building/deploying project wiggly (kit: Android for armeabi-v7a,arm64-v8a,x86,x86_64 (Clang Qt 5.14.2 for Android)) FAIL 13:38:34 Error message: Error while building/deploying project wiggly (kit: Android for armeabi-v7a,arm64-v8a,x86,x86_64 (Clang Qt 5.14.2 for Android)) LOG 13:38:34 When executing step "Build Android APK" LOG 13:38:34
The ndk and sdk paths seem to be missing path separators. Building from command line works however, so I'm not sure if this is a Qt or Qt Creator (4.11.2 (built with Qt 5.14.2) bug... In Qt Creator's Device settings the Android SDK and NDK paths seems to be correct and the Kit/Qt Version seems to be valid though.
For Gerrit Dashboard: QTBUG-82944 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
294351,2 | Android: Fix deployment on Windows host | 5.14.2 | qt/qtbase | Status: MERGED | +2 | 0 |